# migraphx_sample

./: README.md
bert_driver/: LD_LIBRARY_PATH.src  Makefile  bert_mrpc.cpp
cifar-10/: README.md  download.sh
dockerfile/: Dockerfile-18.04:3.0  build.sh  build_dockerfile.sh
dockerfile/copyfiles/: build.sh
glue/: README.txt  bert_tokenize.py  export_glue.py  generate_onnx.sh  glue_dump.sh
imagenet/: README.md
migraphx_driver/: CMakeLists.txt  Makefile  migx.cpp
migraphx_driver/glue/: CoLA.tst  MNLI.tst  README.txt  SST.tst  STS.tst
migraphx_driver/imagenet/: README.md
migraphx_driver/onnx/: pytorch-mnist.py
migraphx_driver/src/: bench.sh  fileinput.cpp  glue.cpp  hcc_profile.sh  image.cpp  imagenet.cpp  migx.cpp  migx.hpp  mnist.cpp
mnist/: README.md  mnist_image0.txt  mnist_image1.txt  mnist_image2.txt  mnist_image3.txt  mnist_image4.txt  mnist_image5.txt  mnist_image6.txt  mnist_image7.txt  mnist_image8.txt  mnist_image9.txt
onnx/: README.md  create_bertlargesquad.py  create_bertsquad.py  pytorch-bert.py  pytorch-bertclassifier.py  pytorch-mnist.py  pytorch-resnet50.py
python/: PYTHONPATH.src  README.md
python/bench/: bench.py  bench_copy.py  bench_nocopy.py  run.sh  run_tfcnn.sh
python/imagenet/: classify-image.py  imagenet.py
python/webcam/: README.md  webcam-migraphx.py
tfpb/: mnist_keras.py
